fix 'sticky' scrolling on cart overlay on mobile

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -7,6 +7,7 @@
   height: 100vh
   left: 0
   overflow-y: scroll
+  -webkit-overflow-scrolling: touch
   padding-top: 100px
   position: fixed
   right: 0
